nueva version con java 21, corrección respecto a item threads virtuales, small fix en orden validacion del caballo y su distancia  recorrida para finalizar